--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
+
 <head>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="d3tip.css">
-    <meta charset="utf-8">
-    <title>Music Recommender</title>
+  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="d3tip.css">
+  <meta charset="utf-8">
+  <title>Music Recommender</title>
 </head>
 
 <body>
-  <script type="text/javascript" src="../lib/d3.v5.min.js"></script>
-  <script type="text/javascript" src="../lib/d3-tip.min.js"></script>
-  <script type="text/javascript" src='../lib/plotly.min.js'></script>
+  <script type="text/javascript" src="lib/d3.v5.min.js"></script>
+  <script type="text/javascript" src="lib/d3-tip.min.js"></script>
+  <script type="text/javascript" src='lib/plotly.min.js'></script>
   <script type="text/javascript" src="main.js"></script>
 
   <div>
@@ -41,7 +42,7 @@
   <br><br>
   <div id="topSongsListContainer">
     <label> Top songs </label>
-    <div id="topSongsList"></div> 
+    <div id="topSongsList"></div>
   </div>
   <br><br>
   <div class="slider-container">
@@ -49,9 +50,9 @@
       <div class="slider-value-box">
         <span id="slider-value">5</span>
       </div>
- 
+
     </div>
-    
+
     <div>
       <span class="slider-label slider-min">1</span>
       <input type="range" min="1" max="10" value="5" class="slider" id="similar_count_slider">
@@ -60,7 +61,7 @@
     </div>
   </div>
 
-  
+
 </body>
 
 </html>
