Legends for FDG and Dropdown

--- a/index.html
+++ b/index.html
@@ -57,9 +57,24 @@
       <span class="slider-label slider-min">1</span>
       <input type="range" min="1" max="10" value="5" class="slider" id="similar_count_slider">
       <span class="slider-label slider-max">10</span>
-
     </div>
   </div>
+
+ <div align="center-container">
+    <svg width="120%">
+        <!-- Recommended (Double Clicked) -->
+        <circle r="10" fill="#95D134" cx="22%" cy="45%"></circle>
+        <text stroke="black" font-size="14px" x="24%" y="48%">Explored Song (On double click)</text>
+
+        <!-- Unexplored Song (On double click) -->
+        <circle r="10" fill="#2E64A2" cx="42%" cy="45%"></circle>
+        <text stroke="black" font-size="14px" x="44%" y="48%">Unexplored Song</text>
+
+        <!-- User Node -->
+        <circle r="10" fill="#E0538F" cx="56%" cy="45%"></circle>
+        <text stroke="black" font-size="14px" x="58%" y="48%">User Node</text>
+    </svg>
+</div>
 
 
 </body>
